fix(frontmatter): small tweaks
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -15,7 +15,7 @@ I understand that my work relates to the rights and obligations under the Act No
     \renewcommand{\arraystretch}{1.3}
     \begin{tabular}{W{c}{0.32\linewidth} p{2em} W{c}{0.42\linewidth}}
         \arrayrulecolor{Gray70} \cmidrule{1-1} \cmidrule{3-3} % gray placeholder lines
-        \emph{Place \& Date} && \emph{\ThesisAuthor} \\
+        \emph{\textsf{Place \& Date}} && \emph{\textsf{\ThesisAuthor}} \\
     \end{tabular}
 \end{center}
 
