--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -1,8 +1,13 @@
 \cleardoublepage
 \markboth{Dedication}{Dedication}
 
+\vspace*{-2ex}
 { \slshape
     Write dedication here.
+    \begin{flushright}
+        \sffamily\large
+        \ThesisAuthor
+    \end{flushright}
 }
 
 \vfill
