--- a/frontmatter/title.tex
+++ b/frontmatter/title.tex
@@ -2,7 +2,7 @@
 \thispagestyle{empty} % no number on the title page
 \begin{center}
     \begin{adjustbox}{center,trim=0 0.2cm 4cm 0.2cm}
-        \includegraphics[width=1.5\textwidth]{MFF-logo.pdf}
+        \includegraphics[width=1.4\textwidth]{MFF-logo.pdf}
     \end{adjustbox}
 
     \Large
@@ -23,7 +23,7 @@
     %% if `\ThesisTitleFront` is not defined, use `\ThesisTitle`
     \ProvideExpandableDocumentCommand{\ThesisTitleFront}{}{\ThesisTitle}
     % {\Huge \bfseries \ThesisTitleFront \par}
-    {\fontsize{30pt}{36pt}\selectfont \sffamily\bfseries
+    {\fontsize{30pt}{36pt}\selectfont \bfseries
         \ThesisTitleFront \par}
 
     \vfill
