feat(silence): silence marginpar warnings
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -6,6 +6,7 @@
 %% DEBUG: various helper debug goodies
 \input{preamble/debug/commands}
 \input{preamble/debug/line-numbers}
+\input{preamble/debug/silence.tex}
 
 %% Colors
 \input{preamble/general/colors}
