--- a/preamble/general/floats.tex
+++ b/preamble/general/floats.tex
@@ -13,6 +13,13 @@
     {./figures/Inkscape/}
     {./frontmatter/img/}
 }
+%% Macro for appending to the graphics path
+\ExplSyntaxOn
+\NewDocumentCommand{\appendtographicspath}{m}{
+    \tl_if_exist:cF { Ginput@path } { \tl_new:c { Ginput@path } }
+    \tl_gput_right:cn {Ginput@path} { #1 }
+}
+\ExplSyntaxOff
 
 %%% Tables
 \usepackage{adjustbox}      % center big tables
