--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %% Enable built-in LaTeX support for PDF/A compliance (must be before `\documentclass`)
-\DocumentMetadata{pdfversion=1.7, pdfstandard=A-2u}
+\DocumentMetadata{lang=en, pdfversion=1.7, pdfstandard=A-2u}
 \input{preamble/pdfA-compliance/glyphtounicode}
 
 %% NOTE: Choose the desirable page layout version (electronic vs print)
