fix(manual): improve title of MFF template
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/bibliography.bib
+++ b/preamble/bibliography.bib
@@ -21,7 +21,7 @@
 }
 @online{MaresTemplate,
     author        = {Mare\v{s}, Martin and Kom\'{a}rek, Arno\v{s}t and Kulich, Michal},
-    title         = {{A Template for Typesetting Thesis at MFF UK in LaTeX}},
+    title         = {{A Template for Typesetting Thesis at MFF UK in \LaTeX{}}},
     year          = {2024},
     url           = {https://gitlab.mff.cuni.cz/teaching/thesis-templates/thesis-en},
     addendum      = {\mkbibacro{URL}\addcolon\space\url{https://mff.cuni.cz/en/students/student-theses-templates}},
