--- a/preamble/references/fields.tex
+++ b/preamble/references/fields.tex
@@ -27,11 +27,12 @@
 
 %% Custom localisation strings
 \DeclareCapitalPunctuation{} % disable automatic capitalization of localisation strings
-\NewBibliographyString{arxiv, github} % define new localisation strings
+\NewBibliographyString{arxiv, github, gitlab} % define new localisation strings
 \DefineBibliographyStrings{english}{
     url = {\textsc{url}},
     arxiv = {\textsc{arXiv}},
     github = {\textsc{GitHub}},
+    gitlab = {\textsc{GitLab}},
     in = {\footnotesize\textsc{In}},
     % in = {},
     editor = {editor},
