--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -6,6 +6,9 @@
 \usepackage{lmodern}  % Latin Modern fonts
 \usepackage{romanbar} % Roman numerals with bars, provides `\Romanbar{...}`
 
+%% slightly more breathing space between lines
+\linespread{1.05}\selectfont
+
 %% Commands for accessing extra Latin Modern fonts
 %%     - `sbc` - sans bold condensed
 %%     - `sfe` - sans serif extended (font family `lmssq` for "Latin Modern Sans Serif Quotation")
