fix(typesetting): consistent spacing in enumerate/itemize
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/general/typesetting.tex
+++ b/preamble/general/typesetting.tex
@@ -27,7 +27,7 @@
 \usepackage{csquotes}            % context-sensitive quotation facilities
 
 %% Enumerate/itemize environments
-\usepackage{paralist}   % improved enumerate and itemize
+\usepackage[alwaysadjust,neverdecrease]{paralist}   % improved enumerate and itemize
 \setdefaultleftmargin{1.87em}{1.7em}{1.5em}{1em}{1em}{1em}
 \setdefaultitem{$\bullet$}{\textbullet}{\textasteriskcentered}{\textperiodcentered}
 \setdefaultenum{\bfseries (1)}{\bfseries (a)}{\bfseries (i)}{A.}
