style(preamble): input without trailing .tex
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -48,9 +48,9 @@
 %% Hacky stuff, oftentimes overriding commands of other packages
 \input{preamble/hacks/custom-reference-boxes}
 \input{preamble/hacks/fix-qed}
-\input{preamble/hacks/floatrow-parskip.tex}
+\input{preamble/hacks/floatrow-parskip}
 
 %% User macros
 \input{preamble/user/macros}
-\input{preamble/user/packages-macros.tex}
+\input{preamble/user/packages-macros}
 \input{preamble/user/math}
