feat(math): add mathfixs package
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/math/packages.tex
+++ b/preamble/math/packages.tex
@@ -10,6 +10,23 @@
 \usepackage{amssymb}    % math fonts
 \usepackage{bm}         % boldface math via `\bm`
 
+
+\usepackage{mathfixs}   % fix some odd behaviour in math mode, add math macros
+% \ProvideMathFix{autobold} % TeXtured contains automatic swith to bold and sans math
+\ProvideMathFix{greekcaps=it}
+\ProvideMathFix{frac,rfrac,vfrac,vfracskippre=4mu}
+% \ProvideMathFix{der,diff}
+
+%% Tiny space in math mode
+%% As of now the `mathfixs` implementation doesn't work in section titles
+% \ProvideMathFix{multskip=1mu} % tiny space `\.` in math mode
+\NewCommandCopy{\dotaccent}{\.}
+\RenewDocumentCommand{\.}{}{\TextOrMath{\dotaccent}{\mspace{1mu}}}
+\NewCommandCopy{\acuteaccent}{\'}
+\RenewDocumentCommand{\'}{}{\TextOrMath{\acuteaccent}{\mspace{-1mu}}}
+
+%% TODO: try out `delimset`, `eqnlines`, maybe `metastr`
+
 %% Some notation used in physics
 \usepackage[italicdiff]{physics}
 
