feat(titles): add paragraph formatting
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/layout/titles.tex
+++ b/preamble/layout/titles.tex
@@ -13,6 +13,7 @@
 %%                                                     (even non-numbered subsections)
 \titleformat{\section}   {\phantomsection\Large\sffamily\bfseries}{\thesection}   {0.8em}{}
 \titleformat{\subsection}{\phantomsection\large\sffamily\bfseries}{\thesubsection}{0.8em}{}
+\titleformat{\paragraph}[runin]{\phantomsection\normalsize\sffamily\bfseries}{\theparagraph}{0em}{}
 
 %% Part title (page) formatting
 \titleformat{\part}[display]
