feat(flags): new EXTRAMARGIN flag
Allows to add extra right margin for WIP version.
Can be useful to add marginnotes, corrections, and so on.

Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/flags.tex
+++ b/preamble/flags.tex
@@ -2,6 +2,7 @@
 
 \newif\ifFANCY       %% whether to enable some more fancy stylistic choices
 \newif\ifWIP         %% whether to enable debug commands, todos, etc.
+\newif\ifEXTRAMARGIN %% whether WIP mode has extra right margin
 \newif\ifCENSOR      %% whether to censor denoted passages
 
 \FANCYtrue        %% by default, enable fancy features
