--- a/thesis.tex
+++ b/thesis.tex
@@ -17,6 +17,7 @@
 % \FANCYfalse % disable some of the more fancy stylistic choices
 %% NOTE: Comment out the following lines for the final version
 \WIPtrue            % THIS IS A WORK-IN-PROGRESS VERSION
+% \EXTRAMARGINtrue  % add extra right margin in WIP version (for notes/corrections)
 \CENSORtrue         % THIS IS A CENSORED VERSION
 
 %% Preamble - data, packages, macros, and more
