docs(toggles): describe the new toggle, rename flags->toggles
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/thesis.tex
+++ b/thesis.tex
@@ -13,7 +13,7 @@
 % \documentclass[12pt,a4paper,openright,twoside]{report}  % two-sided (for printing)
 
 %% Set some toggle flags to control some of the document properties
-\input{preamble/flags}
+\input{preamble/toggles}
 % \FANCYfalse % disable some of the more fancy stylistic choices
 %% NOTE: Comment out the following lines for the final version
 \WIPtrue            % THIS IS A WORK-IN-PROGRESS VERSION
