chore(comment): mention also gitlab field
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/references/doi-eprint-url.tex
+++ b/preamble/references/doi-eprint-url.tex
@@ -1,4 +1,4 @@
-%% add format for `github` field
+%% add format for `github`/`gitlab` field
 \DeclareFieldFormat*{github}{%
     \bibstring{github}\addcolon\space%
     \ifhyperref{\href{https://github.com/#1}{\nolinkurl{#1}}}{\nolinkurl{#1}}%
