chore(user): better user files sourcing
Signed-off-by: Jonas Dujava <jonas.dujava@gmail.com>

--- a/preamble/main.tex
+++ b/preamble/main.tex
@@ -20,6 +20,7 @@
 
 %% Miscellaneous commands/macros
 \input{preamble/misc/macros}
+\input{preamble/misc/packages-macros}
 \input{preamble/misc/tikz}
 \input{preamble/misc/inkscape}
 
@@ -51,6 +52,4 @@
 \input{preamble/hacks/floatrow-parskip}
 
 %% User macros
-\input{preamble/user/macros}
-\input{preamble/user/packages-macros}
-\input{preamble/user/math}
+\input{preamble/user/main}
