--- a/preamble/misc/packages-macros.tex
+++ b/preamble/misc/packages-macros.tex
@@ -2,6 +2,7 @@
 %%            - verbatim macros for commands defined specifically by TeXtured
 
 %% will also utilize styles defined in `/preamble/hacks/custom-reference-boxes.tex`
+\usepackage{tcolorbox}
 \tcbset{
     packagebox/.style ={bottom=0.20ex, fontupper=\ttfamily},
     filebox/.style ={colframe=black!70!cyan!35, colback=black!10!cyan!3, bottom=0.20ex, fontupper=\ttfamily},
