--- a/preamble/math/packages.tex
+++ b/preamble/math/packages.tex
@@ -28,7 +28,7 @@
 %% TODO: try out `delimset`, `eqnlines`, maybe `metastr`
 
 %% Some notation used in physics
-\usepackage[italicdiff]{physics}
+\usepackage{physics}
 
 % \usepackage{tensor}     % tensor indices
 \usepackage{tensind}    % tensor indices
