--- a/preamble/hacks/custom-reference-boxes.tex
+++ b/preamble/hacks/custom-reference-boxes.tex
@@ -16,7 +16,7 @@
     refbox/.style ={colframe=black!30, colback=black!3},
     % refbox/.style ={colframe=black!30, colback=black!3, fontupper=\sffamily},
     pagebox/.style={refbox, boxsep=0.1ex, bottom=0.25ex, fontupper=\ttfamily},
-    hrefbox/.style={colframe=black!10!LinkColor!70, colback=LinkColor!15},
+    hrefbox/.style={colframe=black!10!UrlColor!70, colback=UrlColor!15},
     citebox/.style={left=0em, right=0em, bottom=0.25ex, colframe=black!10!CiteColor!80, colback=CiteColor!20, fontupper=\ttfamily},
 }
 %% Definition of the link boxes (loading corresponding styles)
